--- a/index.html
+++ b/index.html
@@ -5,11 +5,168 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+
     <title>Soccer World</title>
 </head>
 
 <body>
+    <!------------------ Header Section Start ----------------->
+    <header>
 
+    </header>
+
+    <!------------------ Header Section End here ---------------->
+
+
+
+
+
+
+
+    <!----------------- Main sectin start here ------------------>
+
+    <main>
+        <section class="container">
+            <div class="players">
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-1.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Neymar Jr</h2>
+                        <p class="player-details">is a professional Brazilian footballer that can play as a left or
+                            right Winger or as a Striker. He plays for Paris Saint-Germain and the Brazil national team
+                        </p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-2.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Lionel Messi</h2>
+                        <h4 class="player-details">Lionel Andrés Messi, also known as Leo Messi, is an Argentine
+                            professional footballer who plays as a forward for Ligue 1 club Paris Saint-Germain and
+                            captains the Argentina national team.
+                        </h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-3.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Christiano Ronaldo</h2>
+                        <h4 class="player-details">Cristiano Ronaldo dos Santos Aveiro GOIH ComM is a Portuguese
+                            professional footballer who plays as a forward for Premier League club Manchester United and
+                            captains the Portugal national team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-4.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Paolo Dybala</h2>
+                        <h4 class="player-details">Paulo Exequiel Dybala is an Argentine professional footballer who
+                            plays as a forward for Serie A club Juventus and the Argentina national team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-5.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Mesut Ozil</h2>
+                        <h4 class="player-details">Mesut Özil is a German professional footballer who plays as an
+                            attacking midfielder and is the captain of Turkish Süper Lig club Fenerbahçe.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-6.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Mauro Icardi</h2>
+                        <h4 class="player-details">Mauro Emanuel Icardi is an Argentine professional footballer who
+                            plays as a striker for Ligue 1 club Paris Saint-Germain.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-7.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Di Maria</h2>
+                        <p class="player-details">Ángel Fabián Di María is an Argentine professional footballer who
+                            plays for Ligue 1 club Paris Saint-Germain and the Argentina national team.</p>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-8.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Kylian Mbappe</h2>
+                        <h4 class="player-details">Kylian Mbappé Lottin is a French professional footballer who plays as
+                            a forward for Ligue 1 club Paris Saint-Germain and the France national team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-9.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Mohammad Salah</h2>
+                        <h4 class="player-details">Mohamed Salah Hamed Mahrous Ghaly is an Egyptian professional
+                            footballer who plays as a forward for Premier League club Liverpool and captains the Egypt
+                            national team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-10.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Harry Kane</h2>
+                        <h4 class="player-details">Harry Edward Kane MBE is an English professional footballer who plays
+                            as a striker for Premier League club Tottenham Hotspur and captains the England national
+                            team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-11.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Kevin De Bruyne</h2>
+                        <h4 class="player-details">Kevin De Bruyne is a Belgian professional footballer who plays as a
+                            midfielder for Premier League club Manchester City and the Belgium national team.</h4>
+                    </div>
+                </div>
+                <div class="player">
+                    <div class="player-pic">
+                        <img src="images/players/player-12.png" alt="">
+                    </div>
+                    <div class="player-info">
+                        <h2 class="player-name">Philippe Coutinho</h2>
+                        <h4 class="player-details" id="couti">Philippe Coutinho Correia is a Brazilian professional
+                            footballer who plays as an attacking midfielder or winger for Premier League club Aston
+                            Villa and the Brazil national team.</h4>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+
+    <!----------------- Main sectin End here --------------------->
+
+    <!------------------------ Footer start here ---------------->
+    <footer>
+
+    </footer>
+    <!------------------------ Footer End here ---------------->
 </body>
 
 </html>
