Highlights part added

--- a/index.html
+++ b/index.html
@@ -5,7 +5,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- style sheet -->
     <link rel="stylesheet" href="style.css">
+    <!-- font awesome kit -->
+    <script src="https://kit.fontawesome.com/448aee6476.js" crossorigin="anonymous"></script>
 
     <title>Soccer World</title>
 </head>
@@ -13,6 +16,34 @@
 <body>
     <!------------------ Header Section Start ----------------->
     <header>
+        <section class="banner-container">
+            <div class="menus">
+                <div class="menu">
+                    <div class="menu-title">
+
+                    </div>
+                    <div class="login-icon">
+
+                    </div>
+                </div>
+                <div class="banner">
+                    <div class="banner-info">
+                        <h1 class="banner-title">Conmebol
+                            Copa America
+                            2021
+                        </h1>
+                        <p class="watch-button"> <a target="_blank" href="https://www.fifa.com/">Watch Live <span><i
+                                        class="fa-solid fa-arrow-right">
+                                    </i>
+                                </span></a>
+                        </p>
+                    </div>
+                    <div class="banner-logo">
+                        <img src="images/banner.png" alt="">
+                    </div>
+                </div>
+            </div>
+        </section>
 
     </header>
 
@@ -158,6 +189,33 @@
                 </div>
             </div>
         </section>
+
+        <section class="container">
+            <div class="highlights-details">
+
+                <div class="highlights-info">
+                    <h1 class="copa-america">All Highlights
+                        Copa America 2021
+                    </h1>
+                    <p class="highlights-titles">After 28 years of wait, Argentina finally has a trophy as it beat
+                        Brazil in the final of Copa America 2021 at the Maracana Stadium in Rio de Janeiro, Brazil. It
+                        is Argentina's first title since 1993 and 15th Copa America title.</p>
+                    <p class="watch-button link">
+                        <a target="_blank" href="https://www.fifa.com/">Watch Now
+                            <span>
+                                <i class="fa-solid fa-arrow-right"></i>
+                            </span>
+                        </a>
+                    </p>
+                </div>
+                <div class="highlights-logo">
+                    <img src="images/match.png" alt="">
+                </div>
+
+            </div>
+        </section>
+
+
     </main>
 
     <!----------------- Main sectin End here --------------------->
