footer half added

--- a/index.html
+++ b/index.html
@@ -55,9 +55,12 @@
 
 
 
+
+
     <!----------------- Main sectin start here ------------------>
 
     <main>
+
         <section class="container">
             <div class="players">
                 <div class="player">
@@ -215,13 +218,35 @@
             </div>
         </section>
 
-
     </main>
 
     <!----------------- Main sectin End here --------------------->
 
+
+
+
+
+
+
+
+
+
     <!------------------------ Footer start here ---------------->
     <footer>
+        <div class="footer-logo">
+            <img src="images/Logo.png" alt="">
+        </div>
+        <div class="icons">
+            <div class="icon">
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-dribbble"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-brands fa-youtube"></i>
+            </div>
+        </div>
+        <div class="copyright">
+            <p class="copyright-info">Copyright © 2022 Footbal</p>
+        </div>
 
     </footer>
     <!------------------------ Footer End here ---------------->
